--- a/css_proyectos/style proyectos.css
+++ b/css_proyectos/style proyectos.css
@@ -1,6 +1,6 @@
 /* Variables */
 :root {
-    --main-color: #f2debb;
+    --main-color: #ffffff;
     --primary-color: #c4c4c4;
     --secondary-color: #f9f9f9;
   }
